Fixes rtl padding, margin, alignment problems

--- a/src/MudBlazor/Styles/components/_button.scss
+++ b/src/MudBlazor/Styles/components/_button.scss
@@ -199,9 +199,13 @@
         display: inherit;
         margin-left: -4px;
         margin-right: 8px;
+        margin-inline-start: -4px;
+        margin-inline-end: 8px;
 
         &.mud-button-icon-size-small {
             margin-left: -2px;
+            margin-inline-start: -2px;
+            margin-inline-end: 8px;
         }
     }
 
@@ -209,9 +213,13 @@
         display: inherit;
         margin-left: 8px;
         margin-right: -4px;
+        margin-inline-start: 8px;
+        margin-inline-end: -4px;
 
         &.mud-button-icon-size-small {
             margin-right: -2px;
+            margin-inline-end: -2px;
+            margin-inline-start: 8px;
         }
     }
 }
@@ -230,26 +238,4 @@
 
 .mud-button-icon-size-large > *:first-child {
     font-size: 22px;
-}
-
-.mud-application-layout-rtl .mud-button-label {
-    .mud-button-icon-start {
-        margin-right: -4px;
-        margin-left: 8px;
-
-        &.mud-button-icon-size-small {
-            margin-right: -2px;
-            margin-left: 0;
-        }
-    }
-
-    .mud-button-icon-end {
-        margin-right: 8px;
-        margin-left: -4px;
-
-        &.mud-button-icon-size-small {
-            margin-left: -2px;
-            margin-right: 0;
-        }
-    }
 }
