--- a/src/MudBlazor/Styles/components/_pickerdate.scss
+++ b/src/MudBlazor/Styles/components/_pickerdate.scss
@@ -26,6 +26,8 @@
 
 .mud-picker-datepicker-date-landscape {
     margin-right: 16px;
+    margin-inline-end: 16px;
+    margin-inline-start: unset;
 }
 
 
